# TORTOISEV4

TORTOISEV4/: CMakeLists.txt  analyze_tests.py  dice_analysis.py  tortoise_testing
settings/: defaults.dmc
src/cuda_src/: register_dwi_to_b0_cuda.cxx  register_dwi_to_b0_cuda.h  register_dwi_to_slice_cuda.h
src/main/: DIFFPREP.cxx  DIFFPREP.h  DiffusionModel.h  TORTOISE.cxx  TORTOISE_parser.cxx  TORTOISE_parser.h  parse_schedule.h  register_dwi_to_b0.cxx  register_dwi_to_b0.h  register_dwi_to_slice.h  rigid_register_images.cxx  rigid_register_images.h  slice_timing_utils.h
src/tools/EstimateMAPMRI/: MAPMRIModel.cxx  MAPMRIModel.h
src/tools/EstimateTensor/: DTIModel.cxx  DTIModel.h
tests/: CMakeLists.txt  test_cli_parsing.cxx  test_compile_headers.cxx  test_convergence_logic.cxx  test_cuda_parity.cxx  test_displacement_field.cxx  test_image_helpers.h  test_macros.h  test_math_utilities.cxx  test_okan_jacobian.cxx  test_okan_transform.cxx  test_outlier_detection.cxx  test_registration_recovery.cxx  test_s2v_epoch_loop.cxx  test_s2v_registration.cxx  test_s2v_transform.cxx  test_schedule_parsing.cxx  test_slice_timing.cxx  test_temporal_regularize.cxx
tests/integration/: test_s2v_iterative.sh
